Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14537

directory migration failed with -EXDEV if parent directory and sub file have different project ID

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      mdd_migrate_sanity_check() doesn't need to check project ID since it's an internal layout change, otherwise it may fail with -EXDEV if subfile project ID is different from that of parent directory.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: